5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1596_2049.log
== TEST (2019-04-02 15:38:10) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print("o dividendo e :")












9()
y=
-- ERROR:
File "XXXX", line 18
    y=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:43:23) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print("o dividendo e :",x)
print("o divisor e :" ,y)
print("o quociente e:" ,x//y)
print("o resto e :" ,x%y)
-- EXECUTION TIME:
0.163663
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
o dividendo e : 8
o divisor e : 5
o quociente e: 1
o resto e : 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
o dividendo e : 14
o divisor e : 2
o quociente e: 7
o resto e : 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
o dividendo e : 347
o divisor e : 2
o quociente e: 173
o resto e : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:27) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print("o dividendo e :",x)
print("o divisor e :" ,y)
print("o quociente e:" ,x//y)
print("o resto e :" ,x%y)
-- OUTPUT:
o dividendo e : 8
o divisor e : 5
o quociente e: 1
o resto e : 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:43:44) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print("o dividendo e :",x)
print("o divisor e :" ,y)
print("o quociente e:" ,x//y)
print("o resto e :" ,x%y)
-- EXECUTION TIME:
0.171224
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
o dividendo e : 8
o divisor e : 5
o quociente e: 1
o resto e : 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
o dividendo e : 14
o divisor e : 2
o quociente e: 7
o resto e : 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
o dividendo e : 347
o divisor e : 2
o quociente e: 173
o resto e : 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:43:45) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print("o dividendo e :",x)
print("o divisor e :" ,y)
print("o quociente e:" ,x//y)
print("o resto e :" ,x%y)
-- OUTPUT:
o dividendo e : 8
o divisor e : 5
o quociente e: 1
o resto e : 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:24) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:39) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print(x)
print(y)
print(x//y)
print(x%y)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:46:54) 
-- CODE:
x=int(input("digite o valor:"))
y=int(input("digite o outro valor"))

print(x)
print(y)
print(x//y)
print(x%y)
-- EXECUTION TIME:
0.199781
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
